--- a/src/main/resources/static/css/board/list.css
+++ b/src/main/resources/static/css/board/list.css
@@ -1,47 +1,79 @@
-#main{
-    display: flex;
-    flex: 1;
-    ;
+
+
+
+/*#main{*/
+/*    display: flex;*/
+/*    flex: 1;*/
+/*    ;*/
+/*}*/
+
+
+#main_wrapper > h2 {
+    margin: 20px 300px;
 }
 
-#main_wrapper {
+#main_wrapper > form > .search {
+    text-align: right;
+    margin: 20px 305px;
+}
+
+#main_wrapper > form > .search > .form-select {
+    display: unset;
+    width: unset;
+}
+
+#board_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.search > .btn {
+    vertical-align: unset;
+}
+
+.search > .form-control {
+    display: unset;
+    width: unset;
+    margin-right: 5px;
+}
+
+#board {
     border-top : #cdcbbe solid 1px;
-    width: 500px;
+    width: 60vw;
 }
-#main_wrapper > ul {
-    padding-left: 0;
-    margin-bottom: 0;
+
+#board > ul {
+    margin: 0;
+    padding: 0;
 }
-.tex {
+#board > ul > li {
+    padding: 14px;
+    border-bottom: #cdcbbe solid 1px;
+}
+
+#board > ul > li:nth-child(1) {
+    border-bottom : #cdcbbe solid 1px;
+    background: #faf9f4;
+}
+
+#board > ul > li > a {
     color: inherit;
     text-decoration: none;
 }
-
-.tex > div {
-    display: inline-block;
-    margin: 15px;
+#board > ul > li > a:hover {
+    color: #4D473C;
 }
 
-.first > .tex {
-    border-bottom: #ccc solid 1px;
+#board > ul > .answer_li.show {
     display: block;
-    overflow: hidden;
-    zoom: 1;
-    cursor: pointer;
-    background: #faf9f4;
-    height: 100%;
 }
-ul > .content {
-
-    margin: 10px 20px;
+#board > ul > .answer_li {
     display: none;
 }
-
-ul > .content.show {
-    display: block;
-}
-
 .pagination {
-    justify-content: center;
+    margin-top: 30px;
+    display: flex;
     align-items: center;
+    justify-content: center;
 }
