css 전체 수정 완료

--- a/src/main/resources/static/css/board/list.css
+++ b/src/main/resources/static/css/board/list.css
@@ -1,20 +1,14 @@
-
-
-
-/*#main{*/
-/*    display: flex;*/
-/*    flex: 1;*/
-/*    ;*/
-/*}*/
-
+#main_wrapper {
+    width: 1000px;
+    margin: 0 auto;
+}
 
 #main_wrapper > h2 {
-    margin: 20px 300px;
+    margin: 20px;
 }
 
 #main_wrapper > form > .search {
     text-align: right;
-    margin: 20px 305px;
 }
 
 #main_wrapper > form > .search > .form-select {
@@ -22,11 +16,6 @@
     width: unset;
 }
 
-#board_wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
 .search > .btn {
     vertical-align: unset;
@@ -40,7 +29,7 @@
 
 #board {
     border-top : #cdcbbe solid 1px;
-    width: 60vw;
+    margin-top: 20px;
 }
 
 #board > ul {
