--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -19,11 +19,11 @@
     <div id="main_wrapper">
         <form id="mainForm" action="/board/admin/adminWrite" method="post">
             <div>
-                <label class="form-label fw-bold fs-5">제목</label>
+                <label class="form-label fw-bold fs-5">문의 제목</label>
                 <input class="form-control" type="text" name="title" required>
             </div>
             <div class="mb-3">
-                <label class="form-label fw-bold fs-5">내용</label>
+                <label class="form-label fw-bold fs-5">문의 내용</label>
                 <textarea class="form-control" name="content" cols="30" rows="10" required></textarea>
             </div>
             <span class="mb-3">
