modified:   src/main/java/com/whl/hotelService/controller/MyinfoController.java modified:   src/main/java/com/whl/hotelService/controller/UserController.java modified:   src/main/java/com/whl/hotelService/domain/common/service/ReservationService.java modified:   src/main/java/com/whl/hotelService/domain/user/dto/UserDto.java modified:   src/main/java/com/whl/hotelService/domain/user/service/MyinfoService.java modified:   src/main/java/com/whl/hotelService/domain/user/service/UserService.java modified:   src/main/resources/static/css/user/myinfo.css modified:   src/main/resources/templates/fragments/header.html modified:   src/main/resources/templates/fragments/userLeft.html modified:   src/main/resources/templates/user/OauthJoin.html modified:   src/main/resources/templates/user/informationInfo.html modified:   src/main/resources/templates/user/join.html renamed:    src/main/resources/templates/user/questionIfon.html -> src/main/resources/templates/user/questionInfo.html modified:   src/main/resources/templates/user/reservationInfo.html

--- a/src/main/resources/static/css/user/myinfo.css
+++ b/src/main/resources/static/css/user/myinfo.css
@@ -1,4 +1,4 @@
-.admin-container {
+.user-container {
     margin: 5rem 0;
 
     align-items: flex-start;
@@ -7,23 +7,23 @@
     justify-content: space-between;
 }
 
-.admin-container h1 {
+.user-container h1 {
     font-size: 2rem;
     font-weight: 500;
     margin-bottom: 0.5rem;
 }
 
-.admin-container h2 {
+.user-container h2 {
     font-size: 1.5rem;
     font-weight: 500;
     margin-top: 0.5rem;
 }
 
-.admin-container .title-container {
+.user-container .title-container {
     border-bottom: 0.3rem solid #4a4a4a;
 }
 
-.admin-container > .admin-left {
+.user-container > .user-left {
     padding: 1rem;
     width: 250px;
     border: 0.0625rem solid #4a4a4a;
@@ -33,19 +33,19 @@
     justify-content: flex-start;
 }
 
-.admin-container > .admin-left > .menu > .link-container {
+.user-container > .user-left > .menu > .link-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     margin-left: 2rem;
 }
 
-.admin-container > .admin-left > .menu > .link-container > .link {
+.user-container > .user-left > .menu > .link-container > .link {
     margin: 0.5rem 0;
 }
 
 
-.admin-container > .admin-right {
+.user-container > .user-right {
     width: 950px;
     display: flex;
     flex-direction: column;
@@ -54,7 +54,11 @@
     padding: 1rem 1rem 1rem 5rem;
 }
 
-.admin-container > .admin-right > .reservation-table-container {
+.user-container > .user-right > .title-container > h1{
+    display: inline;
+}
+
+.user-container > .user-right > .information-info-container {
     margin-top: 5rem;
     height: 500px;
     border: 0.0625rem solid black;
