--- a/src/main/resources/templates/fragments/userLeft.html
+++ b/src/main/resources/templates/fragments/userLeft.html
@@ -18,24 +18,24 @@
             <h2 class="subtitle">회원정보</h2>
         </div>
         <div class="link-container">
-            <a href="/myinfo/informationInfo?function=read" class="link">회원정보 확인</a>
-            <a href="/myinfo/informationInfo?function=update" class="link">회원정보 수정</a>
-            <a href="/myinfo/informationInfo?function=delete" class="link">회원탈퇴</a>
+            <a href="/user/informationInfo?function=read" class="link">회원정보 확인</a>
+            <a href="/user/informationInfo?function=update" class="link">회원정보 수정</a>
+            <a href="/user/informationInfo?function=delete" class="link">회원탈퇴</a>
         </div>
         <div class="subtitle-container">
-            <h2 class="subtitle">예약사항</h2>
+            <h2 class="subtitle">예약정보</h2>
         </div>
         <div class="link-container">
-            <a href="/myinfo/reservationInfo?function=read" class="link">예약확인</a>
-            <a href="/myinfo/reservationInfo?function=update" class="link">예약변경</a>
-            <a href="/myinfo/reservationInfo?function=delete" class="link">예약취소</a>
+            <a href="/user/reservationInfo?function=read" class="link">예약목록</a>
+            <a href="/user/reservationInfo?function=update" class="link">예약변경</a>
+            <a href="/user/reservationInfo?function=delete" class="link">예약취소</a>
         </div>
         <div class="subtitle-container">
             <h2 class="subtitle">문의사항</h2>
         </div>
         <div class="link-container">
-            <a href="/myinfo/questionInfo?function=create" class="link">문의하기</a>
-            <a href="/myinfo/questionInfo?function=read" class="link">문의내역</a>
+            <a href="/user/questionInfo?function=create" class="link">문의하기</a>
+            <a href="/user/questionInfo?function=read" class="link">문의현황</a>
         </div>
     </div>
 </div>
