--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,9 +17,9 @@
         <div class="subMenu">
             <div class="userArea">
                 <div class="welcome-message-container" sec:authorize="hasRole('ROLE_USER')">
-                    <a class="link name" href="/user/myinfo" th:text="${#authentication.Principal.userDto.name}"></a>님 환영합니다!
+                    <a class="link name" href="/user/informationInfo?function=read" th:text="${#authentication.Principal.userDto.name}"></a>님 환영합니다!
                 </div>
-                <a class="link" href="/user/myinfo" sec:authorize="hasRole('ROLE_USER')">
+                <a class="link" href="/user/informationInfo?function=read" sec:authorize="hasRole('ROLE_USER')">
                     <span class="text">마이페이지</span>
                 </a>
                 <a href="/admin/reservationStatus?region=seoul" class="link" sec:authorize="hasRole('ROLE_ADMIN')">
@@ -28,7 +28,7 @@
                 <a href="/user/login" class="link" sec:authorize="isAnonymous()">
                     <span class="text">로그인</span>
                 </a>
-                <a class="link" href="logout" sec:authorize="isAuthenticated()">
+                <a class="link" href="/logout" sec:authorize="isAuthenticated()">
                     <span class="text">로그아웃</span>
                 </a>
                 <a href="/user/join" class="link" sec:authorize="isAnonymous()">
