--- a/src/main/resources/templates/user/questionInfo.html
+++ b/src/main/resources/templates/user/questionInfo.html
@@ -10,10 +10,11 @@
     <!--  cdns  -->
     <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
 
-    <!--    common.css  -->
+    <!-- css -->
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/user/myinfo.css">
 
+    <!-- js -->
 </head>
 <body>
 
@@ -23,17 +24,23 @@
 
 <main id="main" class="content-container-wrapper">
     <div class="content-container">
-        <div class="admin-container">
-            <div class="admin-left">
-                <th:block th:replace="~{fragments/adminLeft.html :: adminLeft_fragment}"></th:block>
-                <div class="menu">
-                    <div class="subtitle-container">
-                        <h2 class="subtitle">문의사항</h2>
-                    </div>
-
+        <div class="user-container">
+            <th:block th:replace="~{fragments/userLeft.html :: userLeft_fragment}"></th:block>
+            <div class="user-right">
+                <div class="title-container" th:switch="${function}">
+                    <h1 class="title">문의사항 > </h1>
+                    <h1 class="tag" th:case='create'>문의하기</h1>
+                    <h1 class="tag" th:case='read'>문의현황</h1>
+                </div>
+                <div class="information-info-container">
+                    <th:block th:switch="${function}">
+                        <span class="text" th:case='create'>문의하기</span>
+                        <span class="text" th:case='read'>문의현황</span>
+                    </th:block>
                 </div>
             </div>
         </div>
+    </div>
 </main>
 
 <th:block th:insert="~{fragments/footer.html :: footer_fragment}"></th:block>
